Fixed header info bar on mobile

--- a/components/Header.module.scss
+++ b/components/Header.module.scss
@@ -87,6 +87,7 @@
   .infoBar {
     padding-right: 10px;
     padding-left: 10px;
+    letter-spacing: 0;
   }
   .link {
     padding: 0 20px 0 0;
